syntax = "proto3";

option csharp_namespace = "SpringService";

package zodiac;

service SpringStarSignService {
  rpc SpringStarSignRequest(CalendarDate) returns (StarSignResponse);
}

message CalendarDate {
  string day = 1;
  string month = 2;
  string year = 3;
}

message StarSignResponse {
  StarSign starSign = 1;
}

enum StarSign {
   UNDEFINED = 0;
   PESTI = 2;
   BERBEC = 3;
   TAUR = 4;
   GEMENI = 5;
}
